optimize:优化流血效果以及性能
Signed-off-by: shushuwonie <3203818760@qq.com>